<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false"
    android:background="@drawable/redbg">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.justjava.MainActivity"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="THE CAFFEINE SHOP"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#00ff90"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/textfield"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textCapWords"
            android:hint="@string/hint"
            />

        <TextView
            android:id="@+id/rate_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textAllCaps="true"
            android:text="@string/rate"
            android:textColor="#6adccd"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/toppings_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textAllCaps="true"
            android:text="@string/toppings"
            android:textColor="#6adccd"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/W_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:text="Whipped Cream @Rs.1"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
        <CheckBox
            android:id="@+id/C_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:text="Chocalate @Rs.2"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="#6adccd"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:onClick="increment"
                android:background="#231c1c"
                android:text="+"
                android:textSize="20sp"
                android:textColor="#02ffe1"
                android:id="@+id/button" />


            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="0"
                android:textColor="#fff700"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="#231c1c"
                android:onClick="decrement"
                android:text="-"
                android:textColor="#02ffe1"
                android:textSize="20sp"
                android:id="@+id/button3" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/ordersummary"
            android:textColor="#67d2b2"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="0"
            android:textColor="#fff700"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="#02ffe1"
            android:background="#000000"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:onClick="submitOrder"
            android:text="@string/order" />


    </LinearLayout>
</ScrollView>